# mujoco_simulator

./: .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  pixi.toml
.github/workflows/: ci.yml  upload_appimage.yml
include/mujoco_simulator/: types.hpp
mujoco_simulator_cpp/: CMakeLists.txt  pixi.toml
mujoco_simulator_cpp/include/mujoco_simulator/: mujoco_model_view.hpp  serialization.hpp  types.hpp
mujoco_simulator_cpp/resources/: mujoco_simulator.desktop
mujoco_simulator_cpp/src/: main.cc  mjs_spec.cpp  mujoco_model_view.cpp
mujoco_simulator_cpp/src/simulate/: CMakeLists.txt  simulate.cc  simulate.h
mujoco_simulator_py/: README.md  pyproject.toml
mujoco_simulator_py/examples/: acrobot_lqr.py  attach_models_demo.py  ik.py  interactive_ik.py  motion_planning.py
mujoco_simulator_py/mujoco_simulator_py/: mujoco_interface.py  robot.py
mujoco_simulator_py/robots/acrobot/: acrobot.xml  configs.toml
mujoco_simulator_py/robots/kinova/: configs.toml
mujoco_simulator_py/robots/panda/: configs.toml
mujoco_simulator_py/robots/rrr/: configs.toml  rrr.urdf.xacro  scene.xml
mujoco_simulator_py/robots/ur5e/: configs.toml
mujoco_simulator_py/tests/: extra_acceleration_joint.toml  missing_acceleration_joint.toml  non_existing_base_link.toml  non_existing_group_joint.toml  non_existing_robot_descriptions.toml  robot_test.py
scripts/: mujoco_interface.py
src/: main.cc  mujoco_model_view.cpp  sub.cpp
src/simulate/: CMakeLists.txt  simulate.cc  simulate.h
